tests/lifetime/loan/ref_transfer_leaves_source_moved_error_on_reuse.err.expected
error: at 8:13: [INIT-UseAfterMove] In function 'f', block 'entry': variable 'x' is used after move
   |
 8 |             call sink(move x);
   |             ^^^^^^^^^^^^^^^^^
