tests/lifetime/loan/ref_transfer_leaves_source_moved_error_on_reuse.sim

        extern fn sink(r: &out i64);
        fn f(x: &out i64) {
          z: &out i64;
          entry:
            z = move x;
            z.* = 1;
            call sink(move x);
            return
        }
        